--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.5.3",
+    "@sveltejs/adapter-vercel": "^4.0.3",
+    "firebase": "^10.7.1",
     "highlight.js": "11.9.0",
     "lucide-svelte": "^0.302.0"
   }
